--- a/main.css
+++ b/main.css
@@ -434,6 +434,18 @@ a:active {
     font-weight: 500;
 }
 
+#intro-about-button{
+    width: 100%;
+    height: 14vmin;
+    background-color: pink;
+}
+
+#about-button {
+    width: 70vmin;
+    height: 14vmin;
+    background-color: blue;
+}
+
 /*  */
 /*  */
 /* TOP BAR SECTION */
